[package]
name = "DonBot"
version = "0.1.0"
authors = ["Andros Yang <androssdragonq.9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
		
[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[[bin]]
name = "test"
path = "src/hello_world.rs"

[[bin]]
name = "auto_stitch"
path = "src/auto_stitch.rs"