[package]
name = "don_bot"
version = "0.1.0-indev"
authors = ["Andros Yang <androssdragonq.9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
		
[dependencies]
# General
reqwest = { version = "0.10.0-alpha.2", features = ["blocking", "json"]}
tokio = { version = "0.2.9", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yup-oauth2 = "1.0"
hyper = "0.10"
hyper-rustls = "0.6"
rust-ini = "0.13.0"
chrono = "0.4.10"
futures = "0.3.1"

# Automatic Updates
rocket = "0.4.2"
rocket_contrib = "0.4.2"
git2 = "0.11.0"

# Gstreamer
# TODO: remove the original gstreamer dependency
gstreamer = "0.15.0" 
gstreamer-editing-services = "0.15.0"
gstreamer-pbutils = "0.15.0"
gstreamer-editing-services-sys = "0.8.1"
 
# Youtube Core
glib = "0.9.0"
google-youtube3 = "*"

# Twitch Chat
twitchchat = "0.7.2"

# Chat Notification
notify-rust = "3"
rodio = "0.10.0"

# Keyboard bindings
inputbot = "0.4.0"

[[bin]]
name = "config_oauth"
path = "drivers/config_oauth.rs"

[[bin]]
name = "auto_stitch"
path = "drivers/auto_stitch.rs"

[[bin]]
name = "updater"
path = "drivers/updater.rs"

[[bin]]
name = "chat_note"
path = "drivers/chat_note.rs"

[[bin]]
name = "gen_enc"
path = "drivers/gen_encoding.rs"

[[bin]]
name = "key_clip"
path = "drivers/key_clip.rs"

[[bin]]
name = "upload_output"
path = "drivers/upload_output.rs"
